# app/Models/User.php
@@ -28,6 +28,7 @@ class User extends Authenticatable
         'email',
         'password',
         'role',
+        'phone_number',
     ];
 
     /**
